Fix navigation menu layout on small screens
Fix dfe header nav vsibility on small screens. The Dfe branded code snippet for header navigation is not easily visible at 400% zoom. Here, have brought back in line with govuk expandable menu design:

- added a media query to nav ovveride which floats the nav items to the right
- change border colour to be visible on smaller screens

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -59,12 +59,18 @@
   }
 
   .govuk-header nav {
-    display: inline-block;
-    float: right;
+    @include mq ($from: desktop) {
+      display: inline-block;
+      float: right;
+    }
   }
 
   .govuk-header__navigation {
     margin: 0;
+  }
+
+  .govuk-header__navigation-item {
+    border-color: white;
   }
 }
 
